<resources>
    <string name="app_name" translatable="false">SafeGroup</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My groups</string>
    <string name="title_notifications">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="disconnect_message">Disconnect</string>
    <string name="destroy_account">Destroy your account</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="danger">Danger</string>
    <string name="problem">Problem</string>
    <string name="safe">Safe</string>
    <string name="title_activity_three_button" translatable="false">ThreeButton</string>
    <string name="unknown">Unknown</string>
    <string name="nearHome">Near a safe-zone</string>

    <string name="hurt">Hurt</string>
    <string name="freeze">Frozen</string>
    <string name="aggressed">Assaulted</string>
    <string name="lost">Lost</string>

    <string name="sad">Sad</string>
    <string name="needOut">Need to party</string>
    <string name="angry">Angry</string>
    <string name="needLove">Need love</string>

    <string name="friendHome">At a friend\'s home</string>
    <string name="myHome">At home</string>
    <string name="underWatch">Under watch</string>
    <string name="ready">Ready</string>

    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="party">Party</string>
    <string name="selectPrecisely">Select others</string>


    <string name="askState">Ask state</string>
    <string name="changeState">Change state</string>

    <string name="selection_messages">Precise your state</string>
    <string name="group_messages">Select groups to notify</string>
    <string name="group_confirmer">Send</string>
    <string name="notification_message">Notification send !</string>
    <string name="notification_detail_message">You just notified : %1$s ( %2$s ) to groups " %3$s ". </string>
    <string name="description_member"> %1$s notified by %3$s the %2$s  .\n</string>
    <string name="self_description_member"> %1$s ( %2$s ) notified the %3$s .\n</string>


    <array name="state">
        <item>@string/danger</item>
        <item>@string/problem</item>
        <item>@string/safe</item>
        <item>@string/nearHome</item>
        <item>@string/unknown</item>
    </array>

    <array name="group">
        <item>@string/all</item>
        <item>@string/favorite</item>
        <item>@string/party</item>
        <item>@string/selectPrecisely</item>
    </array>


    <array name="precise_state">
        <item>@string/hurt</item>
        <item>@string/aggressed</item>
        <item>@string/freeze</item>
        <item>@string/lost</item>

        <item>@string/sad</item>
        <item>@string/needLove</item>
        <item>@string/angry</item>
        <item>@string/needOut</item>

        <item>@string/myHome</item>
        <item>@string/friendHome</item>
        <item>@string/underWatch</item>
        <item>@string/ready</item>
    </array>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gestion_group" translatable="false">GestionGroupActivity</string>
    <string name="title_group_list" translatable="false">Groups</string>
    <string name="title_group_detail" translatable="false">Group Detail</string>
    <string name="deconnexion">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete_account">Delete my account</string>
    <string name="join_group">Join an existing group</string>
    <string name="other_options">Other options</string>
    <string name="enter_group_link">Type the group link</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="group_doesnt_exist">This group doesn\'t exist</string>
    <string name="join_group_confirm">You have joined the group !</string>
    <string name="confirm">Confirm</string>
    <string name="tileSetState">Select the state to notify</string>
    <string name="no_description">No recent state available</string>
    <string name="notification_detail_error">Oups! An error happen during the connexion to the database. \\nCheck your internet connexion and try again !</string>
    <string name="already_asked">Asked</string>
    <string name="localisation_description">From %1$s the %2$s</string>
    <string name="localisation_distance">At %1$s from you</string>
    <string name="localise_user">Localise</string>
    <string name="set_wifi">Set up your home wifi</string>
    <string name="configured_wifi">"Configured wifi :  "</string>
    <string name="none">None</string>
    <string name="add_new_wifi">Configure a new wifi</string>
    <string name="add_this_wifi">Add this wifi network</string>
    <string name="delete">Delete</string>
    <string name="please_connect_wifi">Please connect to a wifi network</string>
    <string name="confirm_add_wifi">Do you want to add the wifi network \'%1$s\' as your home wifi network ? \nPlease note that when you will be connected to this network, you will be identified as being \"in a safe place.\"</string>
    <string name="delete_wifi">Delete home wifi network</string>
    <string name="confirm_delete_wifi">Are you sure you want to delete your home wifi network ?</string>
    <string name="titlenotificationState">"Notification from  %1$s"</string>
    <string name="notificationDangerState">%1$s is in danger</string>
    <string name="notificationUnresolvedState">Your state have been updated to unknown</string>
    <string name="notificationAskedState">A member of %1$s asked what your state was</string>
</resources>
