<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <Button
                android:id="@+id/sad_button"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorOrangeButton"
                android:text="@string/sad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/angry_button" />

            <Button
                android:id="@+id/angry_button"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorOrangeButton"
                android:text="@string/angry"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/needOut_button"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorOrangeButton"
                android:text="@string/needOut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/needLove_button" />

            <Button
                android:id="@+id/needLove_button"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorOrangeButton"
                android:text="@string/needLove"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/selection_messages"
        android:textColor="@color/colorOutsideButton"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>